--- a/Tool/Loon/Config/Loon_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/Loon/Config/Loon_Sample_Configuration_By_iKeLee.conf
@@ -41,13 +41,6 @@ switch-node-after-failure-times = 3
 韩国场景策略组 = ssid, default = 韩国策略, cellular = 韩国策略, "PHICOMM_5G" = DIRECT, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SSID.png
 美国场景策略组 = ssid, default = 美国策略, cellular = 美国策略, "PHICOMM_5G" = DIRECT, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SSID.png
 新加坡场景策略组 = ssid, default = 新加坡策略, cellular = 新加坡策略, "PHICOMM_5G" = DIRECT, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SSID.png
-# SSID媒体场景策略
-香港媒体场景策略组 = ssid, default = 香港媒体策略, cellular = 香港媒体策略, "PHICOMM_5G" = DIRECT, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SSID.png
-台湾媒体场景策略组 = ssid, default = 台湾媒体策略, cellular = 台湾媒体策略, "PHICOMM_5G" = DIRECT, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SSID.png
-日本媒体场景策略组 = ssid, default = 日本媒体策略, cellular = 日本媒体策略, "PHICOMM_5G" = DIRECT, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SSID.png
-韩国媒体场景策略组 = ssid, default = 韩国媒体策略, cellular = 韩国媒体策略, "PHICOMM_5G" = DIRECT, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SSID.png
-美国媒体场景策略组 = ssid, default = 美国媒体策略, cellular = 美国媒体策略, "PHICOMM_5G" = DIRECT, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SSID.png
-新加坡媒体场景策略组 = ssid, default = 新加坡媒体策略, cellular = 新加坡媒体策略, "PHICOMM_5G" = DIRECT, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SSID.png
 # --------------------------------
 # 手动选择地区策略
 香港策略 = select, 香港延时优选策略组, 香港故障转移策略组, 香港负载均衡策略组, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
@@ -56,13 +49,6 @@ switch-node-after-failure-times = 3
 韩国策略 = select, 韩国延时优选策略组, 韩国故障转移策略组, 韩国负载均衡策略组, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
 美国策略 = select, 美国延时优选策略组, 美国故障转移策略组, 美国负载均衡策略组, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 新加坡策略 = select, 新加坡延时优选策略组, 新加坡故障转移策略组, 新加坡负载均衡策略组, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
-# 手动选择媒体地区策略
-香港媒体策略 = select, 香港媒体延时优选策略组, 香港媒体故障转移策略组, 香港媒体负载均衡策略组, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
-台湾媒体策略 = select, 台湾媒体延时优选策略组, 台湾媒体故障转移策略组, 台湾媒体负载均衡策略组, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
-日本媒体策略 = select, 日本媒体延时优选策略组, 日本媒体故障转移策略组, 日本媒体负载均衡策略组, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
-韩国媒体策略 = select, 韩国媒体延时优选策略组, 韩国媒体故障转移策略组, 韩国媒体负载均衡策略组, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
-美国媒体策略 = select, 美国媒体延时优选策略组, 美国媒体故障转移策略组, 美国媒体负载均衡策略组, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
-新加坡媒体策略 = select, 新加坡媒体延时优选策略组, 新加坡媒体故障转移策略组, 新加坡媒体负载均衡策略组, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 # --------------------------------
 # 自动策略组
 # 延时优选策略组
@@ -89,32 +75,8 @@ switch-node-after-failure-times = 3
 美国负载均衡策略组 = load-balance, 美国节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 新加坡负载均衡策略组 = load-balance, 新加坡节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 # --------------------------------
-# 媒体自动策略组
-# 媒体延时优选策略组
-香港媒体延时优选策略组 = url-test, 香港节点, url = http://www.gstatic.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
-台湾媒体延时优选策略组 = url-test, 台湾节点, url = http://www.gstatic.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
-日本媒体延时优选策略组 = url-test, 日本节点, url = http://www.gstatic.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
-韩国媒体延时优选策略组 = url-test, 韩国节点, url = http://www.gstatic.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
-美国媒体延时优选策略组 = url-test, 美国节点, url = http://www.gstatic.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
-新加坡媒体延时优选策略组 = url-test, 新加坡节点, url = http://www.gstatic.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
-# --------------------------------
-# 媒体故障转移策略组
-香港媒体故障转移策略组 = fallback, 香港节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
-台湾媒体故障转移策略组 = fallback, 台湾节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
-日本媒体故障转移策略组 = fallback, 日本节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
-韩国媒体故障转移策略组 = fallback, 韩国节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
-美国媒体故障转移策略组 = fallback, 美国节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
-新加坡媒体故障转移策略组 = fallback, 新加坡节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
-# --------------------------------
-# 媒体负载均衡策略组
-香港媒体负载均衡策略组 = load-balance, 香港节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
-台湾媒体负载均衡策略组 = load-balance, 台湾节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
-日本媒体负载均衡策略组 = load-balance, 日本节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
-韩国媒体负载均衡策略组 = load-balance, 韩国节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
-美国媒体负载均衡策略组 = load-balance, 美国节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
-新加坡媒体负载均衡策略组 = load-balance, 新加坡节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
-# --------------------------------
 # 手动策略组
+游戏节点手动策略组 = select, 游戏节点, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
 全球节点手动策略组 = select, 全球节点, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
 
 [Rule]
