--- a/Tool/Loon/Config/Loon_Simple_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/Loon/Config/Loon_Simple_Sample_Configuration_By_iKeLee.conf
@@ -42,6 +42,7 @@ switch-node-after-failure-times = 3
 新加坡 = url-test, 新加坡节点, url = http://www.gstatic.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 # --------------------------------
 # 手动策略组
+游戏手动 = select, 游戏节点, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
 全球手动 = select, 全球节点, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
 
 [Rule]
