--- a/Tool/Loon/Config/Loon_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/Loon/Config/Loon_Sample_Configuration_By_iKeLee.conf
@@ -23,14 +23,14 @@ switch-node-after-failure-times = 3
 [Remote Proxy]
 
 [Remote Filter]
-游戏节点 = NameRegex, FilterKey = "^(?=.*((?i)游戏|GAME))(?!.*((?i)回国|校园|教育|久虚|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|群|TG)).*$"
-香港节点 = NameRegex, FilterKey = "^(?=.*((?i)🇭🇰|香港|虚通|HK|Hong))(?!.*((?i)回国|校园|游戏|教育|久虚|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|群|GAME|TG)).*$"
-台湾节点 = NameRegex, FilterKey = "^(?=.*((?i)🇹🇼|台湾|TW|Tai))(?!.*((?i)回国|校园|游戏|教育|久虚|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|群|GAME|TG)).*$"
-日本节点 = NameRegex, FilterKey = "^(?=.*((?i)🇯🇵|日本|川日|东京|大阪|泉日|埼玉|JP|Japan))(?!.*((?i)回国|校园|游戏|教育|久虚|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|群|GAME|TG)).*$"
-韩国节点 = NameRegex, FilterKey = "^(?=.*((?i)🇰🇷|韩国|韓|首尔|KR|Korea))(?!.*((?i)回国|校园|游戏|教育|久虚|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|群|GAME|TG)).*$"
-美国节点 = NameRegex, FilterKey = "^(?=.*((?i)🇺🇸|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|UnitedStates))(?!.*((?i)回国|校园|游戏|教育|久虚|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|群|GAME|TG)).*$"
-新加坡节点 = NameRegex, FilterKey = "^(?=.*((?i)🇸🇬|新加坡|狮|SG|Singapore))(?!.*((?i)回国|校园|游戏|教育|久虚|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|群|GAME|TG)).*$"
-全球节点 = NameRegex, FilterKey = "^(?=.*(.*))(?!.*((?i)官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|群|TG)).*$"
+游戏节点 = NameRegex, FilterKey = "(?=.*((?i)游戏|GAME))(?!.*((?i)回国|校园|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群|TG)).*"
+香港节点 = NameRegex, FilterKey = "(?=.*((?i)🇭🇰|港|虚通|HK|Hong))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群|GAME|TG)).*"
+台湾节点 = NameRegex, FilterKey = "(?=.*((?i)🇹🇼|台|TW|Tai))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群|GAME|TG)).*"
+日本节点 = NameRegex, FilterKey = "(?=.*((?i)🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群|GAME|TG)).*"
+韩国节点 = NameRegex, FilterKey = "(?=.*((?i)🇰🇷|韩|韓|首尔|KR|Korea))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群|GAME|TG)).*"
+美国节点 = NameRegex, FilterKey = "(?=.*((?i)🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|UnitedStates))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群|GAME|TG)).*"
+新加坡节点 = NameRegex, FilterKey = "(?=.*((?i)🇸🇬|新加坡|狮|SG|Singapore))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群|GAME|TG)).*"
+全球节点 = NameRegex, FilterKey = "(?=.*(.*))(?!.*((?i)回国|校园|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群|TG)).*"
 
 [Proxy Group]
 # --------------------------------
