--- a/Tool/Loon/Config/Loon_Simple_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/Loon/Config/Loon_Simple_Sample_Configuration_By_iKeLee.conf
@@ -1,5 +1,5 @@
 # Loon 最小配置
-# Date: 2023.03.28
+# Date: 2023.04.04
 # Author: https://t.me/iKeLee
 
 [General]
@@ -15,7 +15,7 @@ test-timeout = 2
 interface-mode = auto
 switch-node-after-failure-times = 3
 resource-parser = https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Resource/Script/Sub-Store/sub-store-parser_for_loon.js
-#geoip-url = https://gitlab.com/Masaiki/GeoIP2-CN/-/raw/release/Country.mmdb
+geoip-url = https://gitlab.com/Masaiki/GeoIP2-CN/-/raw/release/Country.mmdb
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com, e.crashlynatics.com
 bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 239.255.255.250/32, 255.255.255.255/32
 
@@ -54,16 +54,19 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 # IP-CIDR, 10.0.0.0/8, DIRECT
 # IP-CIDR, 172.16.0.0/12, DIRECT
 # IP-CIDR, 127.0.0.0/8, DIRECT
+IP-CIDR, 223.5.5.5/32, DIRECT, no-resolve
+IP-CIDR, 119.29.29.29/32, DIRECT, no-resolve
+IP-CIDR, 1.12.12.12/32, DIRECT, no-resolve
+IP-CIDR6, 2402:4e00::, DIRECT, no-resolve
 # GEOIP, cn, DIRECT
 FINAL, 香港
 
 [Remote Rule]
 https://gitlab.com/lodepuly/anti-ad/-/raw/master/anti-ad-surge.txt, policy = REJECT, tag = Anti-AD, enabled = true
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Telegram/Telegram.list, policy = 新加坡, tag = Telegram, enabled = true
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Telegram/Telegram.list, policy = 香港, tag = Telegram, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/ApplePushNotificationService.list, policy = DIRECT, tag = Apple Push Notification Service, enabled = true
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/TikTok/TikTok.list, policy = 日本, tag = TikTok, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/OpenAI.list, policy = 香港, tag = OpenAI, enabled = true
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Bing/Bing.list, policy = 香港, tag = Bing, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/AppleID.list, policy = 香港, tag = Apple ID, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/TestFlight/TestFlight.list, policy = 香港, tag = TestFlight, enabled = false
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/AppStore.list, policy = 香港, tag = App Store, enabled = false
@@ -94,6 +97,7 @@ https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Tieba_remove_ad
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Zhihu_remove_ads.plugin, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Cainiao_remove_ads.plugin, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Daily_remove_ads.plugin, enabled = true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/TubeMax_remove_ads.plugin, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Bilibili_remove_ads.plugin, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/RedPaper_remove_ads.plugin, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/IThome_remove_ads.plugin, enabled = true
@@ -112,9 +116,11 @@ https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Remove_ads_by_k
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/TestFlight.plugin, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Fileball_mount.plugin, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/RemoteResourceConverter.plugin, enabled = true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/WARP_Node_Query.plugin, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Node_detection_tool.plugin, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/NodeLinkCheck.Plugin, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Auto_Join_TF.plugin, enabled = false
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/1.1.1.1.plugin, enabled = false
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Sub-Store.plugin, enabled = false
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/BoxJS.plugin, enabled = false
 
